feature: add ktlint (#6)
* feature: add ktlint

* build(deps): bump codacy/git-version from 2.7.1 to 2.8.0

Bumps [codacy/git-version](https://github.com/codacy/git-version) from 2.7.1 to 2.8.0.
- [Release notes](https://github.com/codacy/git-version/releases)
- [Commits](https://github.com/codacy/git-version/compare/2.7.1...2.8.0)

---
updated-dependencies:
- dependency-name: codacy/git-version
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* build(deps): bump org.graalvm.buildtools.native from 0.9.18 to 0.9.19

Bumps [org.graalvm.buildtools.native](https://github.com/graalvm/native-build-tools) from 0.9.18 to 0.9.19.
- [Release notes](https://github.com/graalvm/native-build-tools/releases)
- [Commits](https://github.com/graalvm/native-build-tools/compare/0.9.18...0.9.19)

---
updated-dependencies:
- dependency-name: org.graalvm.buildtools.native
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: MoyaFaustoPoR <f.moya@portofrotterdam.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>