@@ -2,53 +2,93 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 import org.springframework.boot.gradle.tasks.bundling.BootBuildImage
 
 plugins {
-	val springBootVersion = "3.0.1"
-	val springDependencyManagerVersion = "1.1.0"
-	val graalvmBuildToolsVersion = "0.9.19"
-	val kotlinPluginVersion = "1.8.0"
+    val springBootVersion = "3.0.1"
+    val springDependencyManagerVersion = "1.1.0"
+    val graalvmBuildToolsVersion = "0.9.19"
+    val kotlinPluginVersion = "1.7.22"
 
-	id("org.springframework.boot") version springBootVersion
-	id("io.spring.dependency-management") version springDependencyManagerVersion
-	id("org.graalvm.buildtools.native") version graalvmBuildToolsVersion
-	kotlin("jvm") version kotlinPluginVersion
-	kotlin("plugin.spring") version kotlinPluginVersion
-	kotlin("plugin.jpa") version kotlinPluginVersion
+    id("org.springframework.boot") version springBootVersion
+    id("io.spring.dependency-management") version springDependencyManagerVersion
+    id("org.graalvm.buildtools.native") version graalvmBuildToolsVersion
+    kotlin("jvm") version kotlinPluginVersion
+    kotlin("plugin.spring") version kotlinPluginVersion
+    kotlin("plugin.jpa") version kotlinPluginVersion
 }
 
 group = "io.moya"
 java.sourceCompatibility = JavaVersion.VERSION_17
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
+
+val ktlint: Configuration by configurations.creating
+
+val ktlintVersion = "0.48.1"
 
 dependencies {
-	implementation("org.springframework.boot:spring-boot-starter-actuator")
-	implementation("org.springframework.boot:spring-boot-starter-web")
-	implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
-	implementation("org.jetbrains.kotlin:kotlin-reflect")
-	implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-	testImplementation("org.springframework.boot:spring-boot-starter-test")
+
+    // Spring
+    implementation("org.springframework.boot:spring-boot-starter-actuator")
+    implementation("org.springframework.boot:spring-boot-starter-web")
+
+    // Kotlin
+    implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
+    implementation("org.jetbrains.kotlin:kotlin-reflect")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+
+    // Others
+    ktlint("com.pinterest:ktlint:$ktlintVersion") {
+        attributes {
+            attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+        }
+    }
+
+    // Test
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
 }
 
+val outputDir = "${project.buildDir}/reports/ktlint/"
+val inputFiles = project.fileTree(mapOf("dir" to "src", "include" to "**/*.kt"))
+
+val ktlintCheck by tasks.creating(JavaExec::class) {
+    inputs.files(inputFiles)
+    outputs.dir(outputDir)
+
+    description = "Check Kotlin code style."
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    args = listOf("src/**/*.kt", "*.kts")
+}
+
+val ktlintFormat by tasks.creating(JavaExec::class) {
+    inputs.files(inputFiles)
+    outputs.dir(outputDir)
+    jvmArgs = listOf("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+
+    description = "Fix Kotlin code style deviations."
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    args = listOf("-F", "src/**/*.kt", "*.kts")
+}
 
 tasks.withType<KotlinCompile> {
-	kotlinOptions {
-		freeCompilerArgs = listOf("-Xjsr305=strict")
-		jvmTarget = "17"
-	}
+    kotlinOptions {
+        freeCompilerArgs = listOf("-Xjsr305=strict")
+        jvmTarget = "17"
+    }
 }
 
 tasks.withType<Test> {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
 
 tasks.named<BootBuildImage>("bootBuildImage") {
-	tags.add("ghcr.io/moyaf/la-la-land-or-nicky-minaj:latest")
-	docker {
-		publishRegistry {
-			username.set("MoyaF")
-			password.set(System.getenv("DOCKER_REGISTRY_PASSWORD") ?: "")
-		}
-	}
+    tags.add("ghcr.io/moyaf/la-la-land-or-nicky-minaj:latest")
+    docker {
+        publishRegistry {
+            username.set("MoyaF")
+            password.set(System.getenv("DOCKER_REGISTRY_PASSWORD") ?: "")
+        }
+    }
 }
